# MCQ-Solver

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  settings.py
src/anki/: config.py  connect_anki.py  payloads.py  response_status.py
src/components/: basic_widgets.py  image.py  main_frames.py  solution.py  start_menu.py  user_information.py
src/components/tabview/: export_files.py  tabview_settings.py  tabview_utils.py
src/utils/: image_processing.py
src/windows/: help_window.py
