[project]
name = "closed-questions-ai"
version = "0.1.0"
description = "auto-AI solutions to closed questions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "debugpy>=1.8.12",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "emoji>=2.14.1",
    "odfpy>=1.4.1",
    "openai>=1.65.1",
    "pillow>=11.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.28.5",
    "ruff>=0.11.5",
]

[tool.basedpyright]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    "venv/**",
    ".venv/**",
    "alembic/**",
    "build/**",
]
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportImportCycles = "none" # using customtkinter causes import cycles, so we disable this check
